<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.authetication.SigupScreenActivity"
    >

    <LinearLayout
        android:background="@color/ThemeBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:textColor="@color/TitleText"
            android:layout_marginTop="50dp"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUp_title_textview"/>

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_username_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColor="#888888" />

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtEmailSignup"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_email_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColor="#888888" />

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_phone_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColor="#888888" />

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtPasswordSignup"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="#888888"

            />

        <TextView

            android:id="@+id/txtPasswordValidation"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUp_requitePassword_hint"
            android:textColor="#333333 "
            android:textSize="12dp" />

        <EditText
            android:inputType="textPassword"
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtRepassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_repassword"
            android:paddingHorizontal="20dp"
            android:textColor="#888888" />

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:id="@+id/edtCountry"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:hint="@string/SignUp_location_hint"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:textColor="#888888" />

        <Button
            android:textColor="@color/TextButtonColor"
            android:background="@color/ThemeButton"
            android:id="@+id/btnSignup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/SignUp_title_textview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuestionAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/SignUp_question_textview" />

            <TextView
                android:id="@+id/txtNextSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:onClick="onTextViewClicked"
                android:paddingHorizontal="5dp"
                android:text="@string/SignUp_SignIn_textview"
                android:textColor="@color/ThemeButton" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>