<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.authetication.SigInScreenActivity">


    <LinearLayout
        android:background="@color/ThemeBackground"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:layout_gravity="center"
            android:hint="@string/SignIn_email_hint"
            android:paddingHorizontal="20dp"
            android:id="@+id/edtEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:inputType="text"
            android:textColor="#888888"
            />

        <EditText
            android:backgroundTint="@color/ThemeTextField"
            android:textColorHint="@color/HindTextField"
            android:layout_gravity="center"
            android:hint="@string/SignIn_password_hint"
            android:paddingHorizontal="20dp"
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext_background"
            android:ems="10"
            android:inputType="text"
            android:textColor="#888888"
            />

        <Button
            android:background="@color/ThemeButton"
            android:textColor="@color/TextButtonColor"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/SignIn_Login_button"
            />

        <TextView
            android:textColor="@color/ThemeButton"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:id="@+id/txtSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignIn_SignUp_textview" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>